src/test/pass/generics_inherited.ly
define f[A]() {
    define g(A v1) {

    }
}
