src/test/fail/function_redeclare.ly
<@lily function f() {} function f() {} @>
